--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,9 +1,13 @@
 $font-stack: 'Helvetica'
-$text-color: #fff
-$text-color-secondary: #a6a6a6
-$body-bg-color: #271b31
+$text-color: #61dafb
+$text-color-btn: #0b030c
+$text-color-secondary: #fff
+$body-bg-color: #0b030c
 $bg-color: #111
 $bg-color-secondary: #1d1d1d
 $container-border-radius: 10px
 $card-border-radius: 5px
-$gradient: linear-gradient(90deg, rgba(250,82,82,1) 0%, rgba(221,36,118,1)100%)
+//$gradient: linear-gradient(90deg, #61dafb 25%, #cc6699 75%)
+$gradient: linear-gradient(90deg, rgb(0,255,255) 0%, rgb(255,0,255) 100%)
+
+$gradient1: linear-gradient(45deg, rgb(0,255,255) 25%, rgb(255,0,255) 75%)
