--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -7,8 +7,8 @@
 
 @mixin btn 
     padding: 1rem 1.2rem
-    color: variables.$text-color
-    background: variables.$gradient 
+    color: variables.$text-color-btn
+    background: variables.$gradient1 
     text-decoration: none
     border-radius: 3rem
 
