--- a/src/styles/components/techcontainer.sass
+++ b/src/styles/components/techcontainer.sass
@@ -52,5 +52,8 @@
         #excel 
             svg
                 color: #228B22
+        #reactnative
+            svg
+                color: #71abfb
 
     
